Fix dazzleconf-snakeyaml bug on handling non-string keys (#25)